# SDM

./: .gitmodules  CMakeLists.txt
SDM/include/: config.hpp  iodata.hpp  macros.hpp  platform.hpp  x.hpp  ximgproc.hpp  xmath.hpp
SDM/src/: main.cpp
cmake/: SDM.cmake  doc.cmake  tests.cmake
doc/: Doxyfile.in
tests/include/: catch.hpp
tests/xmath/: main.cpp
